--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -25,7 +25,7 @@
    		</tr>
    		<tr>
    			<td></td>		
-		 		<td class="menu-fix"><em class="alt-id food-description">Most Popular: Formerly known as the Midnight Cuban</em><span class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</span></td>
+		 		<td class="menu-fix"><em class="alt-id">Most Popular: Formerly known as the Midnight Cuban</em><span class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</span></td>
   		</tr>
 		</table>
 		<table class="menu-item">
@@ -91,7 +91,7 @@
    			</tr>
    			<tr>
    				<td></td>
-   				<td class="menu-fix"><em class="alt-id food-description">Formerly known as the Midnight Press.</em><span class="food-description">Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)</span></td>	
+   				<td class="menu-fix"><em class="alt-id">Formerly known as the Midnight Press.</em><span class="food-description">Caribbean Roast pork, banana peppers, smoked ham and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)</span></td>	
   			</tr>
 			</table>
 			<table class="menu-item">
@@ -140,7 +140,7 @@
    		</tr>
    		<tr>
    			<td></td>
-   			<td class="food-description">Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh. Served with tortilla chips.<br>
+   			<td><span class="food-description">Jasmine rice, black beans, warm salsa, cheddar cheese, sour cream, pickled jalapenos and a chicken thigh. Served with tortilla chips.</span><br>
    			<em class="alt-id">Additional chicken thigh - $2.00</em></td>
    		</tr>	
 		</table>
@@ -152,7 +152,7 @@
    		</tr>
    		<tr>
    			<td></td>
-   			<td class="food-description">Two scoops of Jasmine rice, a cup of black beans and a chicken thigh.<br>
+   			<td><span class="food-description">Two scoops of Jasmine rice, a cup of black beans and a chicken thigh.</span><br>
    			<em class="alt-id">Additional chicken thigh - $2.00</em></td>
   		</tr>
 		</table>
@@ -164,9 +164,9 @@
    		</tr>
    		<tr>
    			<td></td>
-   			<td class="food-description">Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.<br>
-   			<span><em class="alt-id">Add chicken, pork, or tofu - $3.00</em></span><br>
-   			<span><em class="alt-id">Add prawns, scallops, or fish - $4.00</em>
+   			<td><span class="food-description">Romaine lettuce, purple cabbage, pickled beets, and fresh cilantro, drizzled with our house vinaigrette.</span><br>
+   			<em class="alt-id">Add chicken, pork, or tofu - $3.00</em><br>
+   			<em class="alt-id">Add prawns, scallops, or fish - $4.00</em>
    			</td>
    		</tr>	
    	</table>
@@ -217,13 +217,9 @@
    		</tr>
    		<tr>
    			<td></td>
-   			<td><em class="alt-id food-description">Our entr&eacute;e form of the #2</em><span class="food-description"></span>
+   			<td><em class="alt-id">Our entr&eacute;e form of the #2</em><br><span class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</span>
    			</td>
    		</tr>
-   		<tr>
-   			<td></td>
-   			<td class="food-description">Pork shoulder slow-roasted in Paseo Marinade until falling apart.</td>
-  		</tr>
 		</table>
 		<table class="menu-item">
    		<tr>
