--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -105,7 +105,7 @@
           <td class="food-description">Our twist on a classic. Slices of smoked ham, banana peppers, and swiss cheese, melted together on a hot press. (No lettuce or jalapenos)</td>
         </tr>
       </table>
-      <table class="menu-item">
+      <table class="menu-item doubled">
         <tr>
           <td class="num">10.</td>
           <td class="fdname">Onion Obsession</td>
@@ -116,7 +116,7 @@
           <td class="food-description">Caramelized onions piled high, saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
         </tr>
       </table>
-      <table class="menu-item">
+      <table class="menu-item doubled">
         <tr>
           <td class="num">11.</td>
           <td class="fdname">Seared Scallops</td>
@@ -132,7 +132,7 @@
     <span class="menu-title">The Goods</span>
   </div>
   <div class="span12 block">
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">12.</td>
         <td class="fdname">West Caribbean Bowl</td>
@@ -144,7 +144,7 @@
         <em class="alt-id">Additional chicken thigh - $2.00</em></td>
       </tr> 
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">13.</td>
         <td class="fdname">Rice Bean Thigh Trio</td>
@@ -156,7 +156,7 @@
         <em class="alt-id">Additional chicken thigh - $2.00</em></td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">14.</td>
         <td class="menu-fix"><span class="fdname">Paseo Greens</span><sup class="gf-vg"> GF / VG</sup></td>
@@ -170,7 +170,7 @@
         </td>
       </tr> 
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">15.</td>
         <td class="menu-fix"><span class="fdname">Black Beans and Rice</span><sup class="gf-vg"> GF / VG</sup></td>
@@ -181,7 +181,7 @@
         <td class="food-description">A bowl full of fluffy Jasmine rice smothered in our critically acclaimed vegetarian black beans.</td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">16.</td>
         <td class="menu-fix"><span class="fdname">Rice, Beans and Salad</span><sup class="gf-vg"> GF / VG</sup></td>
@@ -198,7 +198,7 @@
     <span class="description"><br><em>All entr&eacute;es are served with Jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
   </div>
   <div class="span12 block">
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">17.</td>
         <td class="fdname">Half Chicken Dinner</td>
@@ -209,7 +209,7 @@
         <td class="food-description">A huge half chicken oven roasted in Paseo Marinade.</td>
       </tr>
     </table>    
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">18.</td>
         <td class="fdname">Caribbean Roast Dinner</td>
@@ -221,7 +221,7 @@
         </td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">19.</td>
         <td class="fdname">Smokin' Thigh Dinner</td>
@@ -232,7 +232,7 @@
         <td class="food-description">Two bone-in chicken thighs oven roasted in Paseo Marinade.</td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">20.</td>
         <td class="fdname">Chicken Breast Dinner</td>
@@ -243,7 +243,7 @@
         <td class="food-description">A boneless, skinless chicken breast grilled on a flat top and basted wih Paseo Marinade until golden brown.</td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">21.</td>
         <td class="fdname">Pork Loin Dinner</td>
@@ -254,18 +254,18 @@
         <td class="food-description">Cubed pork loin grilled on a flat top and basted with Paseo Marinade until golden brown.</td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">22.</td>
         <td class="menu-fix"><span class="fdname">Caribbean Scallops Dinner</span><sup class="gf-vg">GF</sup></td>
-        <td class="price">$13.00</td>
+        <td class="price" id="too-long">$13.00</td>
       </tr>
       <tr>
         <td></td>
         <td class="food-description">Wild scallops saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">23.</td>
         <td class="menu-fix"><span class="fdname">Paseo Fish Dinner</span><sup class="gf-vg">GF</sup>
@@ -277,7 +277,7 @@
         <td class="food-description">Fish of the day saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">24.</td>
         <td class="menu-fix"><span class="fdname">Paseo Prawn Dinner</span><sup class="gf-vg">GF</sup></td>
@@ -288,7 +288,7 @@
         <td class="food-description">Tiger prawns saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
       </tr>
     </table>
-    <table class="menu-item">
+    <table class="menu-item doubled">
       <tr>
         <td class="num">25.</td>
         <td class="menu-fix"><span class="fdname">Tofu Con Gusto</span><sup class="gf-vg">GF / VG</sup></td>
