updated menu, may be 100% now, testing mobile

--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -411,13 +411,12 @@
       </table> 
   </div><!--end of span12 block-->
   <div class="menu-category span12" id="legend">
-    <p id="legend-text">
+    <div id="legend-text">
     <span class="description">
     GF: Gluten-Free<br>
     VG: Vegetarian<br>
-    </span>
-    <span class="alt-id">All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
-    </p>
+    All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
+    </div>
   </div>    
 </div>
   
