--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,16 @@
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
   <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
-  
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+  </script>
+  <script>
+  $(document).ready(function () {
+        $('ul.nav > li').click(function (e) {
+            $('ul.nav > li').removeClass('active');
+            $(this).addClass('active');                
+        });            
+    });
+  </script>
 </head>
 <body>
   <div class = "container" id="backdrop"> 
@@ -22,8 +31,5 @@
       </div>    
      </div> 
     <%= render 'layouts/footer' %>
-
-  
-
 </body>
 </html>
