--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,9 +24,25 @@ body {
   width: 100%;
 }
 
-/*#00A7D4*/
+/*#00A7D4 background-color: #fd8779;*/
 .header  {
-  background-color: #fd8779;
+  
+
+background-image: linear-gradient(top, rgb(253,134,121) 61%, rgb(253,158,146) 87%);
+background-image: -o-linear-gradient(top, rgb(253,134,121) 61%, rgb(253,158,146) 87%);
+background-image: -moz-linear-gradient(top, rgb(253,134,121) 61%, rgb(253,158,146) 87%);
+background-image: -webkit-linear-gradient(top, rgb(253,134,121) 61%, rgb(253,158,146) 87%);
+background-image: -ms-linear-gradient(top, rgb(253,134,121) 61%, rgb(253,158,146) 87%);
+
+background-image: -webkit-gradient(
+  linear,
+  left top,
+  left bottom,
+  color-stop(0.61, rgb(253,134,121)),
+  color-stop(0.87, rgb(253,158,146))
+);
+
+
 }
 
 .header-info  {
@@ -99,6 +115,9 @@ div.connect-bar a  {
 /*Footer caribbean blue 00A7D4*/
 
 .footer {
+    
+
+
     background-color: #fd8779;
     font-size: 110%;
     height: 100px; 
