--- a/app/views/layouts/_connect.html.erb
+++ b/app/views/layouts/_connect.html.erb
@@ -1,17 +1,15 @@
 
-<div class="connect-section" id="connect-bar">
+<div class="connect-section" id="connect-center">
 	<%=link_to image_tag("fbicon50.png", class:"icon"), "https://www.facebook.com/pages/Paseo-Caribbean-Restaurant/166540673378077", target:"_blank"%> 
 	
 	<%=link_to image_tag("yelp50.png", class:"icon"), "http://www.yelp.com/biz/paseo-seattle", target:"_blank"%>
 		  
 	<%=link_to image_tag("urbansqu50.png", class:"icon"), "http://www.urbanspoon.com/ch/1/68085/seattle/paseo", target:"_blank"%> 
 
-	<%=link_to image_tag("tripadvisor50.jpg", class:"icon"), "http://www.tripadvisor.com/Restaurant_Review-g60878-d432138-Reviews-Paseo_Caribbean-Seattle_Washington.html", target:"_blank"%>   
- </div>
- <div class="twitter" id="connect-bar">
- 		<a href="https://twitter.com/intent/tweet?button_hashtag=PaseoSeattle" class="twitter-hashtag-button" data-size="large" data-related="SumInformation" data-url="http://paseo.herokuapp.com">Tweet #PaseoSeattle</a>
+	<%=link_to image_tag("tripadvisor50.png", class:"icon"), "http://www.tripadvisor.com/Restaurant_Review-g60878-d432138-Reviews-Paseo_Caribbean-Seattle_Washington.html", target:"_blank"%>   
+	<br>
+		<a href="https://twitter.com/intent/tweet?button_hashtag=PaseoSeattle" class="twitter-hashtag-button" data-size="large" data-related="SumInformation" data-url="http://paseo.herokuapp.com">Tweet #PaseoSeattle</a>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-	
-</div>
+ </div>
 
         
