--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Menu') %>
   <div class="row-fluid">
+    <div id="cash-only"><em>Cash Only Establishment</em></div>
     <div class="menu-category span12">
       <span class="menu-title">Sandwiches</span>
       <span class="description">
@@ -417,7 +418,8 @@
     VG: Vegetarian<br>
     All menu items are subject to cross-contamination and therefore are not guaranteed to be allergen-free.</span>
     </div>
-  </div>    
+  </div>
+     <div id="cash-only"><em>Cash Only Establishment</em></div>    
 </div>
   
   
