--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,13 +8,13 @@
   <div class = "navbar">
       <div class = "navbar-inner">
         <ul class = "nav pull-right">
-          <li class="<%= 'active' if current_page?(root_path)%>"><%= link_to "Home", root_path, class:"menu-link"%></li>
+          <li class="<%= 'active' if current_page?(root_path)%>"><%= link_to "Home", root_path, class:"nav-link"%></li>
           
-          <li class="<%= 'active' if current_page?(menu_path) %>"><%= link_to "Menu", menu_path, class:"menu-link" %></li>
+          <li class="<%= 'active' if current_page?(menu_path) %>"><%= link_to "Menu", menu_path, class:"nav-link" %></li>
           
-          <li class="<%= 'active' if current_page?(press_path) %>"><%= link_to "Press", press_path, class:"menu-link" %></li>
+          <li class="<%= 'active' if current_page?(press_path) %>"><%= link_to "Press", press_path, class:"nav-link" %></li>
           
-          <li class="<%= 'active' if current_page?(contact_path) %>"><%= link_to "Contact", contact_path, class:"menu-link"%></li>
+          <li class="<%= 'active' if current_page?(contact_path) %>"><%= link_to "Contact", contact_path, class:"nav-link"%></li>
         </ul> 
       </div>
      </div> 
