--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -120,7 +120,10 @@ margin-bottom: 0px;
  }
 
 .twitter-hashtag-button  {
-  margin-top: 8px;
+  margin: 8px 0px 0px 29px;
+}
+.xl, .count-o {
+margin: 0px 0px 0px 0px;
 }
 
 
