added media query to change width when browser is halfway open

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -24,7 +24,9 @@ body {
   width: 100%;
 }
 
-/*#00A7D4 background-color: #fd8779;*/
+/*#00A7D4 background-color: #fd8779;
+
+*/
 .header  {
   
 
@@ -85,6 +87,10 @@ article{
   border-color: #16994b;
 }
 
+#article-bottom  {
+  margin-bottom: 5px;
+}
+
 .press-top  {
   border-top: dotted;
   border-top-width: 1px;
@@ -116,7 +122,7 @@ margin-bottom: 0px;
 }
 
 #connect-center a {
- margin:0 2px;
+ margin:0 3px;
  }
 
 .twitter-hashtag-button  {
@@ -168,7 +174,7 @@ div.copyright a  {
 
 /* Menu Page */
 #cash-only  {
-    color:#660000;
+    color:#cc292c;
     font-size:1.3em;
     text-align: center;  
 }
@@ -388,5 +394,11 @@ a.nav-link  {
   margin-right: 0px !important;
 }
 */
+
+@media (min-width: 768px) and (max-width: 979px) {
+  .span12 {
+    width: 872px !important;
+  }
+}
 
 @import "bootstrap-responsive";
