--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'News') %>
+	 <div id="cash-only"><em>Cash Only Establishment</em></div>
 	<article class="press-top">
 		<h4>Esquire</h4>
 			<p class="description">
@@ -53,12 +54,13 @@
 	   <cite>The Stranger</cite> suggests our Caribbean Roast Sandwich, referring to it as a "crackwich" in their <a href="http://www.thestranger.com/suggests/14114561/paseo-caribbean-roast-sandwich" target="_blank"> review</a> of our signature item. 
 	  </p>
 	</article>	
-	<article>
+	<article id="article-bottom">
 	  <h4>Seattle P-I</h4>
 	  <p class="description">
       	Paseo came out on top, receiving the #1 ranking on <cite>the Seattle P-I's list of their top 20 sandwiches.<br>
       	Link: <a href="http://blog.seattlepi.com/thebigblog/2012/09/11/seattles-20-best-sandwiches/#7298-1" target="_blank">Seattle's 20 best sandwiches</a>
-	</article>		
+	</article>	
+	 <div id="cash-only"><em>Cash Only Establishment</em></div>	
 
 
 
