made box shadow changes on text-box

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <div class = "container" id="backdrop"> 
       <%= render 'layouts/header' %>
       <div class="row">     
-        <div class="span12 text-box center"> 
+        <div class="span12 text-box center" id="main-text"> 
           <%= yield %>
           <div class="container">
           <%= render 'layouts/connect' %>
