--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Menu') %>
-  <div class="row-fluid">
+  <div class="row-fluid center">
     <div id="cash-only"><em>Cash Only Establishment</em></div>
     <div class="menu-category span12">
       <span class="menu-title">Sandwiches</span>
