--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -52,13 +52,17 @@ background-image: -webkit-gradient(
 }
 
 .text-box{
+
+  overflow: hidden;
   text-align: left;
   background-color:#ffffff;
-  padding: 30px 13px 10px 13px;
+  padding: 30px 5px 10px 13px;
   opacity:0.94;
-  box-shadow: 3px 0px 2px 0px #ffffff, -3px 0px 2px 0px #ffffff;
-  margin: 0px auto 0px auto !important;
+  box-shadow: 0px 0px 1px 3px #ffffff;
+ 
   /*
+   box-shadow: 10px 0px 2px 0px #ffffff, -10px 0px 2px 0px #ffffff, 0px -0px 8px 4px #ffffff;
+ 
   border-left-style: solid;
   border-right-style: solid;
   border-color:#FF7D7D;
@@ -347,17 +351,6 @@ a.nav-link  {
   background-color: #019d7f !important;
 }
 
-/*active states*/
-.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus
-    { 
-
- }
-
-/*hovering states*/
-.nav-collapse .nav > li > a:hover, .nav-collapse .nav > li > a:focus, .nav-collapse .dropdown-menu a:hover, .nav-collapse .dropdown-menu a:focus { 
-    background-color:white;
-}     
-
 .navbar-container  {
   background-color:#01b693; 
   margin-left: 0px; 
@@ -397,9 +390,13 @@ a.nav-link  {
 */
 
 @media (min-width: 768px) and (max-width: 979px) {
-  .span12 {
+  #main-text {
     width: 97% !important;
   }
+}
+
+#main-text  {
+   margin-top: 2px !important;
 }
 
 @import "bootstrap-responsive";
