--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <div class="row header">
-  <div class="span4 header-info">
-    <a href= "/" ><%=image_tag("logo22.jpg", alt: "Logo")%></a>
-  </div>
-  <div class = "span4" id="locations">
-    <span>Fremont 
-  </div>  
+  <div class="container">
+    <div class="span4 header-info">
+      <a href= "/" ><%=image_tag("logo22.jpg", alt: "Logo")%></a>
+    </div>  
+    
+  </div>    
 </div>
 <div class="container navbar-container">
   <div class="span12 center">
