--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,45 @@
-<div class="row-fluid">
-	
-</div>		
+<div class="row-fluid center">
+	<div class="span12">	
+		<div id="myCarousel" class="carousel slide">
+	  <ol class="carousel-indicators">
+	    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	    <li data-target="#myCarousel" data-slide-to="1"></li>
+	    <li data-target="#myCarousel" data-slide-to="2"></li>
+	  </ol>
+	  <!-- Carousel items -->
+	  <div class="carousel-inner">
+	    <div class="active item"><%=image_tag("paseo12.jpg", alt: "restaurant")%></div>
+	    <div class="item"><%=image_tag("paseo12d.jpg", alt: "Logo")%></div>
+	    <div class="item"><%=image_tag("IMG_7793.jpg", alt: "Logo")%></div>
+	  </div>
+	  <!-- Carousel nav -->
+	  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+	  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+		</div>
+	</div>	
+	<div class="span12">
+		<div class="span3 center" id="location-cap">
+		<em>Seattle Locations</em>
+		</div>
+	</div>		
+	<div class="span12">		
+		<div class ="span3 offset3" id="fremont">
+    	<span id="location-name">Fremont</span><br>
+      <span id="address">4225 Fremont Ave N<br>
+      Seattle, WA 98103</span><br>
+      <span id="phone">(206) 545-7440</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
+    </div>
+   	<div class ="span3" id="ballard">
+    	<span id="location-name">Ballard</span><br>
+     	<span id="address">6226 Seaview Ave NW<br>
+			Seattle, WA 98107</span><br>
+			<span id="phone">(206) 545-7440</span><br>
+			<span id="hours">Tu-Sat: 11-9</span> 
+    	</div>
+    	
+ 	</div>
+</div> 	
+
+
+
+
