--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -226,11 +226,12 @@ margin: 0px 0px 0px 0px;
 
 #fremont  {
   text-align: center;
+  margin-top: 10px;
 }
 
 #ballard  {
   text-align: center;
-  padding-top: 10px;
+  margin-top: 10px;
 }
 
 #location-cap  {
