--- a/app/views/static_pages/press.html.erb
+++ b/app/views/static_pages/press.html.erb
@@ -1,4 +1,5 @@
 <% provide(:title, 'News') %>
+<div class="row-fluid">
 	 <div id="cash-only"><em>Cash Only Establishment</em></div>
 	<article class="press-top">
 		<h4>Esquire</h4>
@@ -62,6 +63,6 @@
 	</article>	
 	 <div id="cash-only"><em>Cash Only Establishment</em></div>	
 
-
+</div>
 
 
