--- a/app/views/static_pages/menu.html.erb
+++ b/app/views/static_pages/menu.html.erb
@@ -1,12 +1,11 @@
 <% provide(:title, 'Menu') %>
-  <div class="row-fluid center">
+  
     <div id="cash-only"><em>Cash Only Establishment</em></div>
-    <div class="menu-category span12">
+    <div class="menu-category ">
       <span class="menu-title">Sandwiches</span>
       <span class="description">
       <br><em>All sandwiches are served on a toasted baguette, slathered with our signature aoli, fresh cilantro, pickled jalapenos, romaine lettuce and caramelized onions. Add garlic corn for $1.00</em></span>
     </div> 
-  <div class="span12 block">
     <table class="menu-item">
       <tr>
         <td class="num">1.</td>
@@ -128,11 +127,10 @@
           <td class="food-description">Wild scallops saut&eacute;ed in extra virgin olive oil and garlic tapenade. (Optional spice: 0-5 stars)</td>
         </tr>
     </table>
-  </div><!--end of span12 block-->  
-  <div class="menu-category span12">
+  <div class="menu-category">
     <span class="menu-title">The Goods</span>
   </div>
-  <div class="span12 block">
+  
     <table class="menu-item doubled">
       <tr>
         <td class="num">12.</td>
@@ -192,13 +190,11 @@
         <td></td>
         <td class="food-description">Two scoops of Jasmine rice, a cup of black beans and Paseo Greens.</td>
       </tr>
-    </table>
-  </div><!--end of span12 block-->    
-  <div class="menu-category span12">
+    </table>  
+  <div class="menu-category">
     <span class="menu-title">Entr&eacute;es</span>
     <span class="description"><br><em>All entr&eacute;es are served with Jasmine rice, black beans, Paseo Greens and garlic corn. Available all day.</em><span>
   </div>
-  <div class="span12 block">
     <table class="menu-item doubled">
       <tr>
         <td class="num">17.</td>
@@ -299,13 +295,11 @@
         <td></td>
         <td class="food-description">Firm slices of organic tofu saut&eacute;ed in extra virgin olive oil and our homemade red salsa. Available with cilantro. (Optional spice: 0-5 stars)</td>
       </tr>
-    </table>
-  </div><!--end of span12-->      
-  <div class="menu-category span12 loners">
+    </table>     
+  <div class="menu-category loners">
     <span class="menu-title">Loners</span>
     <span class="description"><br><em>All loners are served with a cup of Jasmine rice.</em><span>
   </div>
-  <div class="span12 block">
     <table>
       <tr class="side top-loner">
         <td></td>
@@ -352,12 +346,10 @@
         <td class="fdname">Tofu in Red Sauce</td>
         <td class="price">$5.75</td>
       </tr>  
-    </table>    
-  </div> <!--end of span12 block-->   
-    <div class="menu-category span12 sides">
+    </table>      
+    <div class="menu-category sides">
       <span class="menu-title">Sides</span>
     </div>
-    <div class="span12 block">
       <table>
         <tr class="side">
           <td></td>
@@ -410,8 +402,7 @@
           <td class="price">$1.25</td>
         </tr>
       </table> 
-  </div><!--end of span12 block-->
-  <div class="menu-category span12" id="legend">
+  <div class="menu-category" id="legend">
     <div id="legend-text">
     <span class="description">
     GF: Gluten-Free<br>
@@ -420,7 +411,7 @@
     </div>
   </div>
      <div id="cash-only"><em>Cash Only Establishment</em></div>    
-</div>
+
   
   
   
