--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,9 @@
 <div class="row header">
-  <div class="container">
+ 
+    <div class="col-12 col-lg-8 center" style="padding-left: 0px;">
     <div class="col-4 col-lg-4 header-info">
       <a href= "/" ><%=image_tag("logo22.jpg", alt: "Logo")%></a>
-    </div> 
+    </div>
     <div class ="col-4 col-sm-2 col-sm-offset-4 col-lg-2 col-lg-offset-4" id="fremont">
       <span id="location-name">Fremont</span><br>
       <span id="address">4225 Fremont Ave N<br>
@@ -15,8 +16,8 @@
       Seattle, WA 98107</span><br>
       <span id="phone">(206) 545-7440</span><br>
       <span id="hours">Tu-Sat: 11-9</span> 
-      </div> 
-  </div>  
+    </div> 
+ </div> 
  <div class="col-12 col-lg-12 navbar-container" id="nav-cont">    
 
   <div class="container">
