added responsive tablet class

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="row header">
  
-    <div class="col-12 col-lg-8 center" style="padding-left: 0px;">
+    <div class="col-12 col-sm-12 col-lg-8 center" style="padding-left: 0px;">
     <div class="col-4 col-lg-4 header-info">
       <a href= "/" ><%=image_tag("logo22.jpg", alt: "Logo")%></a>
     </div>
