--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 <body>
       <%= render 'layouts/header' %>
       <div class="row" id="backdrop">     
-        <div class="col-12 col-lg-8 text-box center" id="main-text"> 
+        <div class="col-12 col-sm-12 col-lg-8 text-box center" id="main-text"> 
           <%= yield %>
           <div class="container">
           <%= render 'layouts/connect' %>
