--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,19 @@
 <div class="row header">
  
-    <div class="col-12 col-sm-12 col-lg-8 center" style="padding-left: 0px;">
-    <div class="col-3 col-lg-4 header-info">
-      <a href= "/" ><%=image_tag("logo22.jpg", alt: "Logo")%></a>
-    </div>
-    <div class ="col-5 col-sm-3 col-sm-offset-3 col-lg-2 col-lg-offset-4" id="fremont">
+    <div class="container" >
+    <div class ="col-3 col-sm-3 col-sm-offset-1 col-lg-2 col-lg-offset-2" id="fremont">
       <span id="location-name">Fremont</span><br>
       <span id="address">4225 Fremont Ave N<br>
       Seattle, WA 98103</span><br>
       <span id="phone">(206) 545-7440</span><br><span id="hours">Tu-Fri: 11-9 &amp; Sat: 11-8</span> 
     </div>
-    <div class ="col-4 col-sm-3 col-lg-2" id="ballard">
+      <div class="col-6 col-sm-4 col-lg-4 header-info">
+        <div class="container" style="
+    text-align: center";>
+      <a href= "/" ><%=image_tag("logo222.jpg", alt: "Logo", class:"img-responsive")%></a>
+        </div>
+    </div>
+    <div class ="col-3 col-sm-3 col-lg-2" id="ballard">
       <span id="location-name">Ballard</span><br>
       <span id="address">6226 Seaview Ave NW<br>
       Seattle, WA 98107</span><br>
